# weather-i-am

./: .env.test  .gitignore  README.md  docker-compose.local.yml  docker-compose.test.yml  pyproject.toml  run_tests.sh
alembic/: env.py
alembic/versions/: 2adf501c008b_create_initial_tables.py  4c9f38940d78_initial.py  b97701202f2b_updating_column_name_for_roles.py
app/: config.py  main.py
app/database/: session.py
app/models/: __init__.py  constants.py  user_model.py  user_parameter_model.py
app/routers/: love_yourself.py  user_auth_route.py  user_parameters_route.py  user_route.py
app/security/: limit_anonymous_usage.py  token_master.py
app/services/: auth_service.py  base.py  user_parameter_service.py  user_service.py
tests/: conftest.py  test_auth_route.py  test_user_parameters_route.py  test_user_route.py
tests/integration_tests/: conftest.py  test_auth_route.py  test_love_yourself.py  test_user_route.py
tests/unit_tests/: test_auth_service.py  test_user_parameter_service.py  test_user_service.py
