# pyproject.toml (Corrected for Poetry)

[tool.poetry]
name = "weatheriam"
version = "0.1.0"
description = ""
authors = ["blem-blem-blam <reed.richard.at@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = {extras = ["all"], version = "^0.118.2"}
uvicorn = ">=0.37.0,<0.38.0"
passlib = ">=1.7.4,<2.0.0"
argon2-cffi = ">=25.1.0,<26.0.0"
pyjwt = ">=2.10.1,<3.0.0"
sqlalchemy = {extras = ["psycopg"], version = "^2.0.44"}
alembic = ">=1.16.5,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
sqlmodel = "^0.0.27"
pydantic = {extras = ["email"], version = "^2.12.0"}
pydantic-settings = "^2.11.0"
pydantic-core = "^2.41.1"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
httpx = ">=0.28.1,<0.29.0"
fastapi = "^0.118.2"
pytest-cov = "^7.0.0"
python-dotenv = "^1.1.1"
sqlalchemy = {extras = ["psycopg"], version = "^2.0.44"}
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "app/models/constants.py",
]